@@ -11,7 +11,7 @@ rcsb.utils.config >= 0.40
 rcsb.utils.ec >= 0.25
 rcsb.utils.go >= 0.18
 rcsb.utils.seq >= 0.82
-rcsb.utils.seqalign >= 0.29
+rcsb.utils.seqalign >= 0.31
 rcsb.utils.targets >= 0.82
 rcsb.utils.struct >= 0.47
 rcsb.utils.taxonomy >= 0.43
